# dream_forge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build_configure.bat  toasty-dancing-ember.md
.claude/: settings.local.json
ai_service/: main.py  requirements.txt  test_ping.py
ai_service/gateway/: ai_gateway.py  ipc_server.py
ai_service/llm/: ollama_provider.py  provider.py
assets/dialogues/: old_chen.json
assets/quests/: tutorial_quests.json
assets/scenes/test/: parallax_test.scene
assets/scripts/: main.lua  test_binding.lua  test_interactions.lua  test_multiframe.lua
assets/ui/: test_hud.json
cmake/: ImGui.cmake  Lua54.cmake  Packaging.cmake  SoLoud.cmake  sol2.cmake
docs/: developer_guide.md
docs/api/: equipment.md  inventory.md  item.md  save.md  stat.md
engine/: CMakeLists.txt
engine/ai/: ai_client.cpp  ai_client.h
engine/audio/: audio_engine.cpp  audio_engine.h
engine/core/: engine.cpp  engine.h  event_bus.cpp  event_bus.h  game_loop.cpp  game_loop.h  save_manager.cpp  save_manager.h
engine/ecs/: component_types.h  entity.h  event_types.h  system.cpp  system.h  world.cpp  world.h
engine/ecs/systems/: dialogue_system.cpp  dialogue_system.h  dialogue_ui_system.cpp  dialogue_ui_system.h  interaction_system.cpp  interaction_system.h  inventory_system.cpp  inventory_system.h  movement_system.cpp  movement_system.h  stat_system.cpp  stat_system.h
engine/input/: input_system.cpp  input_system.h
engine/narrative/: condition_evaluator.cpp  condition_evaluator.h  dialogue_tree.cpp  dialogue_tree.h  quest_definition.h  quest_manager.cpp  quest_manager.h  story_flags.cpp  story_flags.h
engine/render/: gl_loader.cpp  gl_loader.h  post_process.cpp  post_process.h  render_backend.cpp  render_backend.h  render_target.cpp  render_target.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h
engine/render/effects/: bloom_effect.cpp  bloom_effect.h  effect_chain.cpp  effect_chain.h  post_effect.cpp  post_effect.h  vignette_effect.cpp  vignette_effect.h
engine/render/particles/: particle_system.cpp  particle_system.h
engine/render/scene/: camera.cpp  camera.h  scene_renderer.cpp  scene_renderer.h
engine/render/transitions/: transition_manager.cpp  transition_manager.h
engine/resource/: resource_manager.cpp  resource_manager.h
engine/scene/: layer.cpp  layer.h  scene.cpp  scene.h  scene_loader.cpp  scene_loader.h
engine/script/: init.lua  lua_bindings.cpp  lua_bindings.h  script_engine.cpp  script_engine.h
engine/tools/: editor.cpp  editor.h
engine/ui/: data_binding.cpp  data_binding.h  font.cpp  font.h  ui_renderer.cpp  ui_renderer.h  widget.cpp  widget.h
engine/ui/widgets/: box_layout.cpp  box_layout.h  button.cpp  button.h  flex_layout.cpp  flex_layout.h  panel.cpp  panel.h  text.cpp  text.h
sample/: CMakeLists.txt  main.cpp
